2003-12-02  Ben Elliston  <bje@wasabisystems.com>

	* dbxstclass.h: Rename from this ..
	* xcoff.h: .. to this.
	* xcoffout.c: Include xcoff.h.

2003-12-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Makefile.in (GCC_CFLAGS): Add -Wold-style-definition.

2003-12-01  James Lemke <jim@wasabisystems.com>
 
	* config/arm/arm.c (arm_rtx_costs): Improve for xscale multiply.

2003-12-01  Roger Sayle  <roger@eyesopen.com>

	PR optimization/11634
	* recog.c (split_insn): Factor test of INSN_P and handling of
	set_noop_p out of here into the two callers.
	(split_all_insns): Add INSN_P test and set_noop_p handling here.
	If deleting a no-op set after reload that has a REG_UNUSED note,
	mark the basic block as changed and recalculate life information.
	(split_all_insns_noflow): Add INSN_P test and set_noop_p handling
	here.

2003-12-01  Roger Sayle  <roger@eyesopen.com>

	PR optimization/12322
	* gcse.c (struct ls_expr): Change type of hash_index from int to
	unsigned int.
	(hash_expr): Document hash_table_size parameter and wrap long line.
	(ldst_entry): Calculate expression's hash_index and record in ptr.
	(trim_ld_motion_mems): Use hash_index to search a single bucket
	instead of scanning the entire hash_table.  Remove the "del" local
	variable and use the equivalent "expr == 0" instead.  Change last
	to be a pointer to the pointer to the current element, to simplify
	and speed-up deleting from a linked list.

2003-12-01  James E Wilson  <wilson@specifixinc.com>

	* doc/contrib.texi: Update David Mosberger.

	* doc/c-tree.texi (CONSTRUCTOR): Clarify element order and handling
	of missing fields.

	PR target/8407
	* config/ia64/ia64.c (ia64_function_arg): For single-reg HFA, call
	gen_rtx_REG to create new reg with argument mode.

2003-12-01  Steven Bosscher  <stevenb@suse.de>

	* ggc.h (struct alloc_zone): Move forward declaration up.
	(new_ggc_zone): New function prototype.
	(destroy_ggc_zone): Ditto.
	* ggc-simple.c (new_ggc_zone): New function, does nothing.