@@ -221,7 +221,7 @@ struct insn_operand_data
 
   const char *const constraint;
 
-  const ENUM_BITFIELD(machine_mode) mode : 16;
+  ENUM_BITFIELD(machine_mode) const mode : 16;
 
   const char strict_low;
 
